--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -3,3 +3,13 @@ CORS_ORIGIN=*
 
 DB_NAME=CabSharing
 MONGODB_URI=
+
+ACCESS_TOKEN_SECRET=
+ACCESS_TOKEN_EXPIRY=1d
+
+REFRESH_TOKEN_SECRET=
+REFRESH_TOKEN_EXPIRY=7d
+
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
